# cidr_calc

./: Cargo.toml  README.md
.github/workflows/: ci.yml  cidr-calc-ci.yml  cidr-calc-crates-io.yml  cidr-calc-gh-release.yml  create_gh_release.yml  publish_release.yml
cidr_bin/: Cargo.toml
cidr_bin/src/: main.rs
cidr_calc/: Cargo.toml  README.md
cidr_lib/: Cargo.toml  README.md
cidr_lib/src/: cidr_info.rs  error.rs  from_str.rs  helpers.rs  lib.rs
src/: cider_info.rs  cidr_info.rs  error.rs  helpers.rs  ip_class.rs  lib.rs  main.rs
