[package]
name = "cidr_bin"
version = "0.1.5"
edition = "2021"
author = "David Pitoniak (Pitoniak32)"
description = "easily calculate CIDR subnets"
repository = "https://github.com/pitoniak32/cidr_calc"

[[bin]]
name = "cidrc"
path = "src/main.rs"

[dependencies]
cidr_lib = { path = "../cidr_lib", features = ["from_str"]}

anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }

serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
