[package]
name = "cidr_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
regex = { version = "1.10.4", optional = true }

thiserror = "1.0.50"

serde = { workspace = true }
serde_json = { workspace = true }

[features]
from_str = ["dep:regex"]

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
