[package]
name = "cidr_lib"
version = "0.1.1"
description = "easily calculate CIDR subnets"
author = "David Pitoniak (Pitoniak32)"
repository = "https://github.com/pitoniak32/cidr_calc"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
regex = { version = "1.10.4", optional = true }

thiserror = "1.0.50"

serde = { workspace = true }
serde_json = { workspace = true }

[features]
from_str = ["dep:regex"]

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
